<resources>
    <string name="app_name">MoneseAssignment</string>
    <string name="frag_launch">Launch</string>
    <string name="frag_rocket">Rocker</string>
    <string name="height">Height</string>
    <string name="diameter">Diameter</string>
    <string name="mass">Mass</string>
    <string name="cost_per_launch">Cost per launch</string>
    <string name="description">Description</string>
    <string name="dash">-</string>
</resources>