<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.rocket.RocketFragment">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_keyboard_backspace_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/siv_rocket"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:scaleType="centerCrop"
            android:src="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_back"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize15Percent" />

        <TextView
            android:id="@+id/tv_rocket_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/dash"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/siv_rocket"
            app:layout_constraintTop_toTopOf="@id/siv_rocket" />

        <TextView
            android:id="@+id/tv_company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/dash"
            android:textColor="@color/gray"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/siv_rocket"
            app:layout_constraintTop_toBottomOf="@id/tv_rocket_name" />

        <View
            android:id="@+id/view_info"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/border_light"
            app:layout_constraintTop_toBottomOf="@id/siv_rocket" />

        <TextView
            android:id="@+id/tv_heading_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/height"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/tv_heading_diameter"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@id/view_info"
            app:layout_constraintTop_toTopOf="@id/view_info" />

        <TextView
            android:id="@+id/tv_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/dash"
            android:textColor="@color/gray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/tv_heading_height"
            app:layout_constraintStart_toStartOf="@id/tv_heading_height"
            app:layout_constraintTop_toBottomOf="@id/tv_heading_height" />

        <TextView
            android:id="@+id/tv_heading_diameter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/diameter"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/tv_heading_mass"
            app:layout_constraintStart_toEndOf="@id/tv_heading_height"
            app:layout_constraintTop_toTopOf="@id/view_info" />

        <TextView
            android:id="@+id/tv_diameter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/dash"
            android:textColor="@color/gray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/tv_heading_diameter"
            app:layout_constraintStart_toStartOf="@id/tv_heading_diameter"
            app:layout_constraintTop_toBottomOf="@id/tv_heading_diameter" />

        <TextView
            android:id="@+id/tv_heading_mass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/mass"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/view_info"
            app:layout_constraintStart_toEndOf="@id/tv_heading_diameter"
            app:layout_constraintTop_toTopOf="@id/view_info" />

        <TextView
            android:id="@+id/tv_mass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/dash"
            android:textColor="@color/gray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/tv_heading_mass"
            app:layout_constraintStart_toStartOf="@id/tv_heading_mass"
            app:layout_constraintTop_toBottomOf="@id/tv_heading_mass" />


        <TextView
            android:id="@+id/tv_heading_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/siv_rocket"
            app:layout_constraintTop_toBottomOf="@id/view_info" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="sans-serif-condensed-light"
            android:textColor="@color/gray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_heading_desc" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="@id/iv_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_back"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
